# scigantic-empiar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: quickstart.py
scigantic_empiar/: __init__.py  catalog.py  config.py  mrc.py  reader.py  render.py  workspace.py
tests/: conftest.py  test_catalog.py  test_mrc.py  test_preview.py  test_reader.py
